Add client config state and other fixes.